quirion.io demo commit

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <field name="LONGITUDE">0</field>
             <field name="SPEED">5</field>
             <field name="TIME_UNIT">METERS_PER_SEC</field>
-            <field name="while/once">DO</field>
+            <field name="WHILE/ONCE">DO</field>
         </block>
         <block type="scan">
             <field name="LATITUDE">0</field>
@@ -82,7 +82,11 @@
         <block type="scan_while">
             <field name="LATITUDE">0</field>
             <field name="LONGITUDE">0</field>
-            <field name="while/once">DO</field>
+            <field name="WHILE/ONCE">DO</field>
+        </block>
+        <block type="land">
+            <field name="LATITUDE">0</field>
+            <field name="LONGITUDE">0</field>
         </block>
         <!-- Generated code not working yet...
         <block type="wait">
